SSL, openjfx, jdk18