@@ -1,1 +1,6 @@
 Simple chat with JavaFX UI.
+
+[openjfx](https://openjfx.io/) required to run client:
+```
+java --module-path "path_to_javafx-sdk_lib" --add-modules javafx.controls,javafx.fxml -jar ChatClient.jar
+```
